# prereq-dependency

./: .gitignore  README.md  pyproject.toml  requirements.txt  vercel.json
.github/workflows/: ci.yml  deploy.yml
api/: index.py
backend/: __init__.py  analyze_cascade.py  analyze_foundations.py  api.py  export_static.py  llm_fallback.py  loader.py  models.py  parser.py  scrape_majors.py  scraper.py
backend/data/: courses.db
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
frontend/public/: graph.json  majors.json
frontend/src/: App.tsx  Graph.tsx  ProfileContext.tsx  cascade.ts  data.ts  foundations.ts  index.css  main.tsx  profile.ts  types.ts
frontend/tests/: smoke.spec.ts
tests/: test_parser.py  test_smoke.py
